force-app/main/default/objects/Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <label>Claim Amount</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>