force-app/main/default/objects/Claim__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Claim Rejected</fullName>
            </value>
            <value>
                <fullName>Claim Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>