force-app/main/default/objects/Claim__c/fields/Insurance_Claim_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Claim_ID__c</fullName>
    <formula>Patient_Name__r.Insurance_ID__c</formula>
    <label>Insurance Claim ID</label>
    <type>Text</type>
</CustomField>