force-app/main/default/objects/Claim__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <formula>Patient_Name__r.Insurance_Company__c</formula>
    <label>Insurance Company</label>
    <type>Text</type>
</CustomField>