force-app/main/default/objects/Claim__c/fields/Insurance_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Email__c</fullName>
    <formula>Patient_Name__r.Insurance_Company_Email__c</formula>
    <label>Insurance Company Email</label>
    <type>Text</type>
</CustomField>