force-app/main/default/objects/Claim__c/fields/MB_ID__c.field-meta.xml
<CustomField>
    <fullName>MB_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MB ID</label>
    <referenceTo>Medical_Bill__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>