force-app/main/default/objects/Claim__c/fields/Medical_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Medical_Bill_Amount__c</fullName>
    <formula>MB_ID__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>