force-app/main/default/objects/Claim__c/fields/Reason_for_rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rejection__c</fullName>
    <label>Reason for rejection</label>
    <type>TextArea</type>
</CustomField>